- Added API-contracts module - Refactored API emulator and Rest Client modules - Updated Http-support module - Updated Properties module - Updated Emulator manager - Modules covered with unit/integration tests - Developed integration tests (REST-client - API-emulator)